--- a/src/main/webapp/app/instructor-dashboard/instructor-dashboard.html
+++ b/src/main/webapp/app/instructor-dashboard/instructor-dashboard.html
@@ -69,7 +69,7 @@
         <td ng-switch on="result.buildSuccessful">
         <span ng-switch-when="true">
         <span class="text-success">
-            <i class="fa fa-lg fa-check-circle-o"></i>&nbsp;{{result.resultString}}
+            <i class="fa fa-lg fa-check-circle-o"></i>&nbsp;<a ng-click="$ctrl.showDetails(result)">{{result.resultString}}</a>
         </span> (<span am-time-ago="result.buildCompletionDate"></span>)
     </span>
     <span ng-switch-when="false">
