Adjusted error message

--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -85,7 +85,7 @@
         }
 
         if (isChrome === false && isSafari === false) {
-            alert("Unfortunately your Browser is not supported yet for UML modeling exercises.\nOnly Chrome and Safari are supported now.\n\nWe highly recommend to use Chrome as it provides the best performance");
+            alert("Unfortunately your Browser is not supported yet for UML modeling exercises.\nSupported Browsers are Chrome and Safari.\n\nWe highly recommend to use Chrome.");
             window.history.back();
         } else {
 
