--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -87,7 +87,11 @@
         if (isChrome === false && isSafari === false) {
             alert("Unfortunately your Browser is not supported yet for UML modeling exercises.\nSupported Browsers are Chrome and Safari.\n\nWe highly recommend to use Chrome.");
             window.history.back();
-        } else {
+        }
+        else {
+            if (isChrome === false && isSafari === true) {
+                alert("Unfortunately the UML editor is not fully optimized for Safari yet.\nYou might see some performance issues if you continue to use Safari for this modelling exercise.\n\nWe highly recommend to use Chrome.")
+            }
 
 
             var saveButton = $("#umlSaveButton");
