hide submit button

--- a/src/main/webapp/app/uml-editor/umleditor.html
+++ b/src/main/webapp/app/uml-editor/umleditor.html
@@ -27,7 +27,7 @@
                     <umlresult participation="$ctrl.participation" on-new-result="$ctrl.updateLatestResult($event)"
                                show-build-date="false" load-details="true"></umlresult>
 
-                    <button id="umlSaveButton" type="button" class="btn btn-primary navbar-btn">
+                    <button id="umlSaveButton" type="button" class="btn btn-primary navbar-btn" style="visibility: hidden;">
                         <span id="umlSaveButtonText"><i class="fa fa-play-circle-o"></i> Save & Run Tests</span>
                     </button>
 
