Enable DEBUG mode - basically log in with admin without any password (workaround for the password decryption error); Add UI checkbox model for the instructor to choose "Team Exercise" when creating an exercise. The information gets passed, but still no exercise gets created.

--- a/src/main/webapp/app/entities/programming-exercise/programming-exercises.html
+++ b/src/main/webapp/app/entities/programming-exercise/programming-exercises.html
@@ -27,6 +27,7 @@
                     <th jh-sort-by="baseBuildPlanId"><span data-translate="artemisApp.programmingExercise.baseBuildPlanId">Base Build Plan Id</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="publishBuildPlanUrl"><span data-translate="artemisApp.programmingExercise.publishBuildPlanUrl">Publish Build Plan Url</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th jh-sort-by="allowOnlineEditor"><span data-translate="artemisApp.programmingExercise.allowOnlineEditor">Allow Online Editor</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="teamExercise"><span data-translate="artemisApp.programmingExercise.teamExercise">Team Exercise</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
