--- a/src/main/webapp/app/entities/programming-exercise/programming-exercise-detail.html
+++ b/src/main/webapp/app/entities/programming-exercise/programming-exercise-detail.html
@@ -36,6 +36,10 @@
         <dd>
             <span>{{vm.programmingExercise.allowOnlineEditor}}</span>
         </dd>
+        <dt><span data-translate="artemisApp.programmingExercise.teamExercise">Team Exercise</span></dt>
+        <dd>
+            <span>{{vm.programmingExercise.teamExercise}}</span>
+        </dd>
         <dt><span data-translate="artemisApp.exerciseLtiConfiguration.lti">LTI</span></dt>
         <dd>
             <a ui-sref="programming-exercise-detail.ltiConfiguration({id:vm.programmingExercise.id})">LTI Configuration</a>
