--- a/src/main/webapp/app/entities/programming-exercise/programming-exercise-dialog.html
+++ b/src/main/webapp/app/entities/programming-exercise/programming-exercise-dialog.html
@@ -65,6 +65,11 @@
                 <input type="checkbox" name="allowOnlineEditor" id="field_allowOnlineEditor"
                           ng-model="vm.programmingExercise.allowOnlineEditor"/>
         </div>
+        <div class="form-group">
+            <label class="control-label checkbox-label" data-translate="artemisApp.programmingExercise.teamExercise" for="field_teamExercise">Team Exercise</label>
+            <input type="checkbox" name="teamExercise" id="field_teamExercise"
+                   ng-model="vm.programmingExercise.teamExercise"/>
+        </div>
 
     </div>
     <div class="modal-footer">
