--- a/src/main/webapp/app/entities/exercise/exercise-delete-dialog.html
+++ b/src/main/webapp/app/entities/exercise/exercise-delete-dialog.html
@@ -6,27 +6,13 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p data-translate="artemisApp.exercise.delete.question" translate-values="{id: '{{vm.exercise.title}}'}">Are you sure you want to delete this Exercise?</p>
-        <p></p>
-        <div class="checkbox">
-            <label class="control-label text-danger">
-                <input type="checkbox" name="deleteParticipations" ng-model="vm.deleteParticipations"/> Delete all participations, existing results, repositories and build plans of this Exercise.</label>
-
-        </div>
-
-        <div class="form-group">
-            <label class="text-danger">Please type in the name of the Exercise to confirm.</label>
-            <input type="text" class="form-control"
-                   value="" ng-model="vm.confirmExerciseName"  />
-        </div>
-
-
+        <p data-translate="arTeMiSApp.exercise.delete.question" translate-values="{id: '{{vm.exercise.id}}'}">Are you sure you want to delete this Exercise?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span data-translate="entity.action.cancel">Cancel</span>
         </button>
-        <button type="submit" class="btn btn-danger" ng-disabled="deleteForm.$invalid || vm.deleteInProgress || (vm.confirmExerciseName != vm.exercise.title)">
+        <button type="submit" ng-disabled="deleteForm.$invalid" class="btn btn-danger">
             <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span data-translate="entity.action.delete">Delete</span>
         </button>
     </div>
