--- a/src/main/webapp/app/entities/exercise/exercise-detail.html
+++ b/src/main/webapp/app/entities/exercise/exercise-detail.html
@@ -1,28 +1,32 @@
 
 <div>
-    <h2><span data-translate="artemisApp.exercise.detail.title">Exercise</span> {{vm.exercise.id}}</h2>
+    <h2><span data-translate="arTeMiSApp.exercise.detail.title">Exercise</span> {{vm.exercise.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
-        <dt><span data-translate="artemisApp.exercise.title">Title</span></dt>
+        <dt><span data-translate="arTeMiSApp.exercise.title">Title</span></dt>
         <dd>
             <span>{{vm.exercise.title}}</span>
         </dd>
-        <dt><span data-translate="artemisApp.exercise.releaseDate">Release Date</span></dt>
+        <dt><span data-translate="arTeMiSApp.exercise.releaseDate">Release Date</span></dt>
         <dd>
             <span>{{vm.exercise.releaseDate | date:'medium'}}</span>
         </dd>
-        <dt><span data-translate="artemisApp.exercise.dueDate">Due Date</span></dt>
+        <dt><span data-translate="arTeMiSApp.exercise.dueDate">Due Date</span></dt>
         <dd>
             <span>{{vm.exercise.dueDate | date:'medium'}}</span>
         </dd>
-        <dt><span data-translate="artemisApp.exercise.course">Course</span></dt>
+        <dt><span data-translate="arTeMiSApp.exercise.exerciseType">Exercise Type</span></dt>
+        <dd>
+            <span data-translate="{{'arTeMiSApp.ExerciseType.' + vm.exercise.exerciseType}}">{{vm.exercise.exerciseType}}</span>
+        </dd>
+        <dt><span data-translate="arTeMiSApp.exercise.teamManager">Team Manager</span></dt>
+        <dd>
+            <a ui-sref="team-manager-detail({id:vm.exercise.teamManager.id})">{{vm.exercise.teamManager.id}}</a>
+        </dd>
+        <dt><span data-translate="arTeMiSApp.exercise.course">Course</span></dt>
         <dd>
             <a ui-sref="course-detail({id:vm.exercise.course.id})">{{vm.exercise.course.title}}</a>
-        </dd>
-        <dt><span data-translate="artemisApp.exerciseLtiConfiguration.lti">LTI</span></dt>
-        <dd>
-            <a ui-sref="exercise-detail.ltiConfiguration({id:vm.exercise.id})">LTI Configuration</a>
         </dd>
     </dl>
 
@@ -30,5 +34,10 @@
             ui-sref="{{ vm.previousState }}"
             class="btn btn-info">
         <span class="glyphicon glyphicon-arrow-left"></span>&nbsp;<span data-translate="entity.action.back"> Back</span>
+    </button>
+
+    <button type="button" ui-sref="exercise-detail.edit({id:vm.exercise.id})" class="btn btn-primary">
+        <span class="glyphicon glyphicon-pencil"></span>
+        <span class="hidden-sm-down" data-translate="entity.action.edit"> Edit</span>
     </button>
 </div>
