--- a/src/main/webapp/app/entities/exercise/exercise-dialog.html
+++ b/src/main/webapp/app/entities/exercise/exercise-dialog.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
-        <h4 class="modal-title" id="myExerciseLabel" data-translate="artemisApp.exercise.home.createOrEditLabel">Create or edit a Exercise</h4>
+        <h4 class="modal-title" id="myExerciseLabel" data-translate="arTeMiSApp.exercise.home.createOrEditLabel">Create or edit a Exercise</h4>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
@@ -14,13 +14,13 @@
                     ng-model="vm.exercise.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="artemisApp.exercise.title" for="field_title">Title</label>
+            <label class="control-label" data-translate="arTeMiSApp.exercise.title" for="field_title">Title</label>
             <input type="text" class="form-control" name="title" id="field_title"
                     ng-model="vm.exercise.title"
                     />
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="artemisApp.exercise.releaseDate" for="field_releaseDate">Release Date</label>
+            <label class="control-label" data-translate="arTeMiSApp.exercise.releaseDate" for="field_releaseDate">Release Date</label>
                 <div class="input-group">
                     <input id="field_releaseDate" type="text" class="form-control" name="releaseDate" datetime-picker="{{dateformat}}" ng-model="vm.exercise.releaseDate" is-open="vm.datePickerOpenStatus.releaseDate"
                     />
@@ -30,7 +30,7 @@
                 </div>
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="artemisApp.exercise.dueDate" for="field_dueDate">Due Date</label>
+            <label class="control-label" data-translate="arTeMiSApp.exercise.dueDate" for="field_dueDate">Due Date</label>
                 <div class="input-group">
                     <input id="field_dueDate" type="text" class="form-control" name="dueDate" datetime-picker="{{dateformat}}" ng-model="vm.exercise.dueDate" is-open="vm.datePickerOpenStatus.dueDate"
                     />
@@ -39,18 +39,28 @@
                     </span>
                 </div>
         </div>
+        <div class="form-group">
+            <label class="control-label" data-translate="arTeMiSApp.exercise.exerciseType" for="field_exerciseType">Exercise Type</label>
+            <select class="form-control" name="exerciseType" ng-model="vm.exercise.exerciseType" id="field_exerciseType">
+                <option value="INDIVIDUAL" data-translate="arTeMiSApp.ExerciseType.INDIVIDUAL">INDIVIDUAL</option>
+                <option value="TEAM" data-translate="arTeMiSApp.ExerciseType.TEAM">TEAM</option>
+            </select>
+        </div>
 
         <div class="form-group">
-            <label data-translate="artemisApp.exercise.course" for="field_course">Course</label>
+            <label data-translate="arTeMiSApp.exercise.teamManager" for="field_teamManager">Team Manager</label>
+            <select class="form-control" id="field_teamManager" name="teamManager" ng-model="vm.exercise.teamManager" ng-options="teamManager as teamManager.id for teamManager in vm.teammanagers track by teamManager.id">
+                <option value=""></option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label data-translate="arTeMiSApp.exercise.course" for="field_course">Course</label>
             <select class="form-control" id="field_course" name="course" ng-model="vm.exercise.course" ng-options="course as course.title for course in vm.courses track by course.id">
                 <option value=""></option>
             </select>
         </div>
     </div>
     <div class="modal-footer">
-        <a class="btn btn-danger pull-left" ui-sref="exercise-for-course.reset({id:vm.exercise.id})" ng-hide="vm.exercise.id == null" aria-hidden="false">
-            <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span>Reset Exercise</span>
-        </a>
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span data-translate="entity.action.cancel">Cancel</span>
         </button>
