--- a/src/main/webapp/app/entities/exercise/exercises.html
+++ b/src/main/webapp/app/entities/exercise/exercises.html
@@ -1,23 +1,15 @@
 <div>
-    <h2><span ng-show="vm.course">{{vm.course.title}} - </span> Exercises</h2>
+    <h2 data-translate="arTeMiSApp.exercise.home.title">Exercises</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="exercise-for-course.new" >
+                <button class="btn btn-primary" ui-sref="exercise.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span data-translate="artemisApp.exercise.home.createLabel">
+                    <span  data-translate="arTeMiSApp.exercise.home.createLabel">
                         Create new Exercise
                     </span>
                 </button>
-            </div>
-            <div class="col-xs-8 no-padding-right" ng-hide="vm.course">
-                <form name="searchForm" class="form-inline">
-                    <div class="input-group pull-right">
-                        <input type="text" class="form-control" ng-model="vm.filterCourse" placeholder="Filter by course" uib-typeahead="course.title for course in vm.courses | filter:$viewValue | limitTo:8" typeahead-no-results="noResults">
-                        <span class="input-group-addon"><i class="fa fa-filter"></i></span>
-                    </div>
-                </form>
             </div>
         </div>
     </div>
@@ -27,30 +19,30 @@
             <thead>
                 <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.reset()">
                     <th jh-sort-by="id"><span data-translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="title"><span data-translate="artemisApp.exercise.title">Title</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="releaseDate"><span data-translate="artemisApp.exercise.releaseDate">Release Date</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="dueDate"><span data-translate="artemisApp.exercise.dueDate">Due Date</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="course.title" ng-hide="vm.course"><span data-translate="artemisApp.exercise.course">Course</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="title"><span data-translate="arTeMiSApp.exercise.title">Title</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="releaseDate"><span data-translate="arTeMiSApp.exercise.releaseDate">Release Date</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="dueDate"><span data-translate="arTeMiSApp.exercise.dueDate">Due Date</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="exerciseType"><span data-translate="arTeMiSApp.exercise.exerciseType">Exercise Type</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="teamManager.id"><span data-translate="arTeMiSApp.exercise.teamManager">Team Manager</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="course.title"><span data-translate="arTeMiSApp.exercise.course">Course</span> <span class="glyphicon glyphicon-sort"></span></th>
                     <th></th>
                 </tr>
             </thead>
             <tbody infinite-scroll="vm.loadPage(vm.page + 1)" infinite-scroll-disabled="vm.page >= vm.links['last']">
-                <tr ng-repeat="exercise in vm.exercises  | filter:{course:{title:vm.filterCourse}} track by exercise.id">
+                <tr ng-repeat="exercise in vm.exercises track by exercise.id">
                     <td><a ui-sref="exercise-detail({id:exercise.id})">{{exercise.id}}</a></td>
                     <td>{{exercise.title}}</td>
                     <td>{{exercise.releaseDate | date:'medium'}}</td>
                     <td>{{exercise.dueDate | date:'medium'}}</td>
-                    <td ng-hide="vm.course">
+                    <td data-translate="{{'arTeMiSApp.ExerciseType.' + exercise.exerciseType}}">{{exercise.exerciseType}}</td>
+                    <td>
+                        <a ui-sref="team-manager-detail({id:exercise.teamManager.id})">{{exercise.teamManager.id}}</a>
+                    </td>
+                    <td>
                         <a ui-sref="course-detail({id:exercise.course.id})">{{exercise.course.title}}</a>
                     </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
-                            <button type="submit"
-                                    ui-sref="participation-for-exercise({exerciseId:exercise.id})"
-                                    class="btn btn-primary btn-sm">
-                                <span class="fa fa-list-alt"></span>
-                                <span class="hidden-xs hidden-sm">Participations</span>
-                            </button>
                             <button type="submit"
                                     ui-sref="exercise-detail({id:exercise.id})"
                                     class="btn btn-info btn-sm">
@@ -58,13 +50,13 @@
                                 <span class="hidden-sm-down" data-translate="entity.action.view"></span>
                             </button>
                             <button type="submit"
-                                    ui-sref="exercise-for-course.edit({id:exercise.id})"
-                                    class="btn btn-warning btn-sm">
+                                    ui-sref="exercise.edit({id:exercise.id})"
+                                    class="btn btn-primary btn-sm">
                                 <span class="glyphicon glyphicon-pencil"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.edit"></span>
                             </button>
                             <button type="submit"
-                                    ui-sref="exercise-for-course.delete({id:exercise.id})"
+                                    ui-sref="exercise.delete({id:exercise.id})"
                                     class="btn btn-danger btn-sm">
                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                 <span class="hidden-sm-down" data-translate="entity.action.delete"></span>
