--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -121,6 +121,18 @@
     <script src="app/instructor-dashboard/instructor-course-dashboard.component.js"></script>
     <script src="app/home/home.state.js"></script>
     <script src="app/home/home.controller.js"></script>
+    <script src="app/entities/team-manager/team-manager-dialog.controller.js"></script>
+    <script src="app/entities/team-manager/team-manager-detail.controller.js"></script>
+    <script src="app/entities/team-manager/team-manager-delete-dialog.controller.js"></script>
+    <script src="app/entities/team-manager/team-manager.state.js"></script>
+    <script src="app/entities/team-manager/team-manager.service.js"></script>
+    <script src="app/entities/team-manager/team-manager.controller.js"></script>
+    <script src="app/entities/team/team-dialog.controller.js"></script>
+    <script src="app/entities/team/team-detail.controller.js"></script>
+    <script src="app/entities/team/team-delete-dialog.controller.js"></script>
+    <script src="app/entities/team/team.state.js"></script>
+    <script src="app/entities/team/team.service.js"></script>
+    <script src="app/entities/team/team.controller.js"></script>
     <script src="app/entities/submitted-answer/submitted-answer-dialog.controller.js"></script>
     <script src="app/entities/submitted-answer/submitted-answer-detail.controller.js"></script>
     <script src="app/entities/submitted-answer/submitted-answer-delete-dialog.controller.js"></script>
