--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -171,6 +171,7 @@
     <script src="app/entities/question/question.controller.js"></script>
     <script src="app/entities/programming-exercise/programming-exercise-dialog.controller.js"></script>
     <script src="app/entities/programming-exercise/programming-exercise-detail.controller.js"></script>
+    <script src="app/entities/programming-exercise/programming-exercise-delete-dialog.controller.js"></script>
     <script src="app/entities/programming-exercise/programming-exercise.state.js"></script>
     <script src="app/entities/programming-exercise/programming-exercise.service.js"></script>
     <script src="app/entities/programming-exercise/programming-exercise.controller.js"></script>
@@ -205,12 +206,24 @@
     <script src="app/entities/modeling-exercise/modeling-exercise.state.js"></script>
     <script src="app/entities/modeling-exercise/modeling-exercise.service.js"></script>
     <script src="app/entities/modeling-exercise/modeling-exercise.controller.js"></script>
+    <script src="app/entities/model-comparison-exercise/model-comparison-exercise-dialog.controller.js"></script>
+    <script src="app/entities/model-comparison-exercise/model-comparison-exercise-detail.controller.js"></script>
+    <script src="app/entities/model-comparison-exercise/model-comparison-exercise-delete-dialog.controller.js"></script>
+    <script src="app/entities/model-comparison-exercise/model-comparison-exercise.state.js"></script>
+    <script src="app/entities/model-comparison-exercise/model-comparison-exercise.service.js"></script>
+    <script src="app/entities/model-comparison-exercise/model-comparison-exercise.controller.js"></script>
     <script src="app/entities/lti-user-id/lti-user-id-dialog.controller.js"></script>
     <script src="app/entities/lti-user-id/lti-user-id-detail.controller.js"></script>
     <script src="app/entities/lti-user-id/lti-user-id-delete-dialog.controller.js"></script>
     <script src="app/entities/lti-user-id/lti-user-id.state.js"></script>
     <script src="app/entities/lti-user-id/lti-user-id.service.js"></script>
     <script src="app/entities/lti-user-id/lti-user-id.controller.js"></script>
+    <script src="app/entities/lti-outcome-url/lti-outcome-url-dialog.controller.js"></script>
+    <script src="app/entities/lti-outcome-url/lti-outcome-url-detail.controller.js"></script>
+    <script src="app/entities/lti-outcome-url/lti-outcome-url-delete-dialog.controller.js"></script>
+    <script src="app/entities/lti-outcome-url/lti-outcome-url.state.js"></script>
+    <script src="app/entities/lti-outcome-url/lti-outcome-url.service.js"></script>
+    <script src="app/entities/lti-outcome-url/lti-outcome-url.controller.js"></script>
     <script src="app/entities/feedback/feedback-dialog.controller.js"></script>
     <script src="app/entities/feedback/feedback-detail.controller.js"></script>
     <script src="app/entities/feedback/feedback-delete-dialog.controller.js"></script>
