Added Exercise code

--- a/src/main/webapp/app/entities/course/courses.html
+++ b/src/main/webapp/app/entities/course/courses.html
@@ -58,6 +58,10 @@
                                         ui-sref="modeling-exercise-for-course({courseid:course.id})"
                                         data-translate="artemisApp.course.modelingExercises"
                                     ></a></li>
+                                    <li><a
+                                        ui-sref="model-comparison-exercise-for-course({courseid:course.id})"
+                                        data-translate="artemisApp.course.modelComparisonExercises"
+                                    ></a></li>
                                 </ul>
                             </div>
 
