--- a/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-dialog.html
+++ b/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-dialog.html
@@ -4,7 +4,7 @@
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 ng-click="vm.clear()">&times;</button>
-        <h4 class="modal-title" id="myModelComparisonExerciseLabel" data-translate="arTeMiSApp.modelComparisonExercise.home.createOrEditLabel">Create or edit a Model Comparison Exercise</h4>
+        <h4 class="modal-title" id="myModelComparisonExerciseLabel" data-translate="artemisApp.modelComparisonExercise.home.createOrEditLabel">Create or edit a Model Comparison Exercise</h4>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
@@ -14,13 +14,13 @@
                     ng-model="vm.modelComparisonExercise.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="arTeMiSApp.modelComparisonExercise.baseRepositoryUrl" for="field_baseRepositoryUrl">Base Repository Url</label>
+            <label class="control-label" data-translate="artemisApp.modelComparisonExercise.baseRepositoryUrl" for="field_baseRepositoryUrl">Base Repository Url</label>
             <input type="text" class="form-control" name="baseRepositoryUrl" id="field_baseRepositoryUrl"
                     ng-model="vm.modelComparisonExercise.baseRepositoryUrl"
                     />
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="arTeMiSApp.modelComparisonExercise.baseBuildPlanId" for="field_baseBuildPlanId">Base Build Plan Id</label>
+            <label class="control-label" data-translate="artemisApp.modelComparisonExercise.baseBuildPlanId" for="field_baseBuildPlanId">Base Build Plan Id</label>
             <input type="text" class="form-control" name="baseBuildPlanId" id="field_baseBuildPlanId"
                     ng-model="vm.modelComparisonExercise.baseBuildPlanId"
                     />
