--- a/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-delete-dialog.html
+++ b/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-delete-dialog.html
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <p data-translate="arTeMiSApp.modelComparisonExercise.delete.question" translate-values="{id: '{{vm.modelComparisonExercise.id}}'}">Are you sure you want to delete this Model Comparison Exercise?</p>
+        <p data-translate="artemisApp.modelComparisonExercise.delete.question" translate-values="{id: '{{vm.modelComparisonExercise.id}}'}">Are you sure you want to delete this Model Comparison Exercise?</p>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
