--- a/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-detail.html
+++ b/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-detail.html
@@ -1,14 +1,14 @@
 
 <div>
-    <h2><span data-translate="arTeMiSApp.modelComparisonExercise.detail.title">Model Comparison Exercise</span> {{vm.modelComparisonExercise.id}}</h2>
+    <h2><span data-translate="artemisApp.modelComparisonExercise.detail.title">Model Comparison Exercise</span> {{vm.modelComparisonExercise.id}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
-        <dt><span data-translate="arTeMiSApp.modelComparisonExercise.baseRepositoryUrl">Base Repository Url</span></dt>
+        <dt><span data-translate="artemisApp.modelComparisonExercise.baseRepositoryUrl">Base Repository Url</span></dt>
         <dd>
             <span>{{vm.modelComparisonExercise.baseRepositoryUrl}}</span>
         </dd>
-        <dt><span data-translate="arTeMiSApp.modelComparisonExercise.baseBuildPlanId">Base Build Plan Id</span></dt>
+        <dt><span data-translate="artemisApp.modelComparisonExercise.baseBuildPlanId">Base Build Plan Id</span></dt>
         <dd>
             <span>{{vm.modelComparisonExercise.baseBuildPlanId}}</span>
         </dd>
