--- a/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercises.html
+++ b/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercises.html
@@ -1,12 +1,12 @@
 <div>
-    <h2 data-translate="arTeMiSApp.modelComparisonExercise.home.title">Model Comparison Exercises</h2>
+    <h2 data-translate="artemisApp.modelComparisonExercise.home.title">Model Comparison Exercises</h2>
     <jhi-alert></jhi-alert>
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
                 <button class="btn btn-primary" ui-sref="model-comparison-exercise.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span  data-translate="arTeMiSApp.modelComparisonExercise.home.createLabel">
+                    <span  data-translate="artemisApp.modelComparisonExercise.home.createLabel">
                         Create new Model Comparison Exercise
                     </span>
                 </button>
@@ -19,8 +19,8 @@
             <thead>
                 <tr>
                     <th><span data-translate="global.field.id">ID</span></th>
-                    <th><span data-translate="arTeMiSApp.modelComparisonExercise.baseRepositoryUrl">Base Repository Url</span></th>
-                    <th><span data-translate="arTeMiSApp.modelComparisonExercise.baseBuildPlanId">Base Build Plan Id</span></th>
+                    <th><span data-translate="artemisApp.modelComparisonExercise.baseRepositoryUrl">Base Repository Url</span></th>
+                    <th><span data-translate="artemisApp.modelComparisonExercise.baseBuildPlanId">Base Build Plan Id</span></th>
                     <th></th>
                 </tr>
             </thead>
