--- a/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-detail.html
+++ b/src/main/webapp/app/entities/model-comparison-exercise/model-comparison-exercise-detail.html
@@ -4,6 +4,24 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
+
+        <dt><span data-translate="artemisApp.exercise.title">Title</span></dt>
+        <dd>
+            <span>{{vm.modelComparisonExercise.title}}</span>
+        </dd>
+        <dt><span data-translate="artemisApp.exercise.releaseDate">Release Date</span></dt>
+        <dd>
+            <span>{{vm.modelComparisonExercise.releaseDate | date:'medium'}}</span>
+        </dd>
+        <dt><span data-translate="artemisApp.exercise.dueDate">Due Date</span></dt>
+        <dd>
+            <span>{{vm.modelComparisonExercise.dueDate | date:'medium'}}</span>
+        </dd>
+        <dt><span data-translate="artemisApp.exercise.course">Course</span></dt>
+        <dd>
+            <a ui-sref="course-detail({id:vm.modelComparisonExercise.course.id})">{{vm.modelComparisonExercise.course.title}}</a>
+        </dd>
+
         <dt><span data-translate="artemisApp.modelComparisonExercise.baseRepositoryUrl">Base Repository Url</span></dt>
         <dd>
             <span>{{vm.modelComparisonExercise.baseRepositoryUrl}}</span>
